--- a/public/services/index.html
+++ b/public/services/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="swiper">
-      <div id="swiper_wrapper" class="swiper-wrapper" data-swiper="{&quot;delay&quot;:5000,&quot;speed&quot;:500,&quot;effect&quot;:&quot;fade&quot;}">
+      <div id="swiper_wrapper" class="swiper-wrapper" data-swiper="{&quot;delay&quot;:5000,&quot;speed&quot;:800,&quot;effect&quot;:&quot;&quot;}">
   <div class="swiper-slide" data-type="img">
     <img class="media" src="../../rsn8-cms/public//uploads/1_53283089e0.png">
   </div>
