--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="scripts.js"></script>
-    <link rel="stylesheet" href="/public/index.css">
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../..//public/index.css">
   </head>
   <body>
-    <div class="swipers">
-      <div id="swiper_wrapper" class="swiper-wrapper">
-        <div class="swiper-slide" data-type="img">
-          <img class="media" src="/public/welcome.png">
-        </div>      
-      </div>
+    <div class="swiper">
+      <div id="swiper_wrapper" class="swiper-wrapper" data-swiper="{&quot;effect&quot;:&quot;&quot;}">
+  <div class="swiper-slide" data-type="img">
+    <img class="media" src="../../rsn8-cms/public//uploads/4_a4f85d58b5.png">
+  </div>
+</div>
     </div>
-    
-  </body>
-</html>
+
+    <script src="../../public/scripts.js"></script>
+  
+</body></html>
