--- a/public/res-students/index.html
+++ b/public/res-students/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="swiper">
-      <div id="swiper_wrapper" class="swiper-wrapper" data-swiper="{&quot;delay&quot;:5000,&quot;speed&quot;:1000,&quot;effect&quot;:&quot;flip&quot;}">
+      <div id="swiper_wrapper" class="swiper-wrapper" data-swiper="{&quot;delay&quot;:5000,&quot;speed&quot;:800,&quot;effect&quot;:&quot;coverflow&quot;}">
   <div class="swiper-slide" data-type="img">
     <img class="media" src="../../rsn8-cms/public//uploads/2_dc3e4580b7.png">
   </div>
