Adding fix for video in slides

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -23,6 +23,12 @@
   <div class="swiper-slide" data-type="img">
     <img class="media" src="../../rsn8-cms/public//uploads/6_ef26d6d4aa.png">
   </div>
+
+  <div class="swiper-slide" data-type="video">
+    <video class="media" muted="" autoplay="">
+      <source type="video/mp4" src="../../rsn8-cms/public//uploads/Announcement_Video_Loop1_1_5453314e89.mp4">
+    </video>
+  </div>
 </div>
     </div>
 
